# sirpi-bolt

./: index.html  package-lock.json  package.json  tailwind.config.js
sirpi-google/: .uvignore  README.md  alembic.ini  env.example  pyproject.toml  sequence.txt
sirpi-google-frontend/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
sirpi-google-frontend/src/app/: layout.tsx  page.tsx
sirpi-google-frontend/src/app/[userProjects]/: layout.tsx  page.tsx
sirpi-google-frontend/src/app/[userProjects]/[projectSlug]/: page.tsx
sirpi-google-frontend/src/app/[userProjects]/[projectSlug]/deploy/: page.tsx
sirpi-google-frontend/src/app/[userProjects]/import/: page.tsx
sirpi-google-frontend/src/app/[userProjects]/import/[repo]/: page.tsx
sirpi-google-frontend/src/app/api/github/auth/: route.ts
sirpi-google-frontend/src/app/api/github/oauth/auth/: route.ts
sirpi-google-frontend/src/app/error/: page.tsx
sirpi-google-frontend/src/app/github/setup/: page.tsx
sirpi-google-frontend/src/app/projects/: layout.tsx  page.tsx
sirpi-google-frontend/src/app/projects/import/: page.tsx
sirpi-google-frontend/src/app/projects/import/[repo]/: page.tsx
sirpi-google-frontend/src/app/projects/new/: page.tsx
sirpi-google-frontend/src/app/projects/settings/: page.tsx
sirpi-google-frontend/src/components/: conditional-header.tsx
sirpi-google-frontend/src/components/ui/: bolt-badge.tsx  icons.tsx
sirpi-google-frontend/src/lib/: api-client.ts
sirpi-google-frontend/src/lib/api/: github.ts  projects.ts  workflow.ts
sirpi-google/alembic/: env.py
sirpi-google/app/: auth.py  config.py  database.py  main.py
sirpi-google/app/models/: __init__.py  agent_event.py  agent_session.py  cloud_resource.py  deployment_template.py  generated_file.py  github_installation.py  project.py  repository.py  user.py
sirpi-google/app/routers/: __init__.py  github.py  projects.py  users.py  webhooks.py
sirpi-google/app/schemas/: github.py  project.py  repository.py
sirpi-google/app/services/: github_service.py  project_service.py  repository_service.py
sirpi-google/app/utils/: __init__.py  slug.py
src/: App.tsx  main.tsx
